# conanTemplate

./: CMakeLists.txt  LICENSE  README.md  conanfile.txt
src/: CMakeLists.txt  main.cpp
